# telco-vecchio

./: .gitignore  README.md  build-ipkg  config.toml  control  telco-vecchio-init
daemon/: Cargo.toml
daemon/src/: application.rs  at_utils.rs  common.rs  email_utils.rs  init.rs  main.rs  request.rs  sms_utils.rs  ssh_utils.rs  status.rs  user.rs
luci/root/usr/share/luci/menu.d/: luci-app-telco-vecchio.json
luci/root/usr/share/rpcd/acl.d/: luci-app-telco-vecchio.json
luci/views/: actions.js  logs.js  other.js
