[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.39", features = ["rt","fs","io-util","macros","process","time","sync"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"] }
regex-lite = "0.1"
simple_logger = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tinyjson = "2.5"
surge-ping = "0.8"
dns-lookup = "2.0"


[profile.release]
lto = "fat"
strip = true